# projeto-final-lab-so

./: CMakeLists.txt  main.cpp
configuration/: Configuration.cpp
game_objects/laser/: Laser.cpp  Laser.h
game_objects/ovni/: Ovni.cpp  Ovni.h
game_objects/player/: Player.cpp  Player.h
game_objects/worker/: GeradorDeMoedas.cpp  GeradorDeMoedas.h  Worker.cpp  Worker.h
sprites/: Sprite.cpp  Sprite.h
